# wall-e

./: .env.example  .gitignore  LICENSE  README.md  brain.py  pyproject.toml  wall_e.service
labs/: audio_test.py  brain_mac.py  gemini_test.py  mic_test.py
